Fix #14694: Search - Change default operator to OR instead of AND (#14695)
* Fix #14694: Search - Change default operator to OR instead of AND

* Minor: Remove ngram from the indexes

* Tune weights on the search fields